--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 		<nav>
     		<ul>
         		<li><a href="/">Accueil</a></li>
-	        	<li><a href="/documents">Documents</a></li>
+	        	<li><a href="/docs">Documents</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Bonjour ! Qq documents sur Hubert Desgranges</h1>
+				<h1><a href="./docs/1915_01_10/1915_05_10.html"</a>Lettres à sa mère du 05 Oct 1915</h1>
     		</div>
 		</div>
 		<footer>
