--- a/index.html
+++ b/index.html
@@ -4,23 +4,15 @@
 		<title>Hubert Desgranges</title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Accueil</a></li>
-	        	<li><a href="/docs">Documents</a></li>
-    		</ul>
-		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Bonjour ! Qq documents sur Hubert Desgranges</h1>
-				<h1><a href="./docs/1915_05_10/1915_05_10.html"</a>Lettres à sa mère du 05 Oct 1915</h1>
+        		<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 Oct 1915</a></h3>
     		</div>
 		</div>
 		<footer>
     		<ul>
-        		<li><a href="mailto:hubertdesgranges@yahoor.fr</a></li>
-        		<li><a href="https://github.com/hbrtdsgrngs">github.com/hbrtdsgrngs</a></li>
-			</ul>
+        		<li><a href="mailto:hubertdesgranges@yahoo.fr">hubertdesgranges@yahoo.fr</a></li>
+		</ul>
 		</footer>
 	</body>
 </html>
