commit première lettre

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 		<title>Hubert Desgranges</title>
 	</head>
 	<body>
-		<div class="container">
-    		<div class="blurb">
-        		<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 Oct 1915</a></h3>
-    		</div>
-		</div>
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hubertdesgranges@yahoo.fr">hubertdesgranges@yahoo.fr</a></li>
-		</ul>
-		</footer>
+	<div class="container">
+		
+    	<div class="blurb">
+		<h1>  Quelques documents sur la guerre 14/18 de Hubert Desgranges </h1>
+
+        	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 Oct 1915</a></h3>
+    	</div>
+	</div>
+	<footer>
+    		<a href="mailto:hubertdesgranges@yahoo.fr">hubertdesgranges@yahoo.fr</a>
+	</footer>
 	</body>
 </html>
