--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     	</div>
 	</div>
 	<footer>
-    		<a href="mailto:hubertdesgranges@yahoo.fr">hubertdesgranges@yahoo.fr</a>
+    		<a href="mailto:hubertdesgranges@yahoo.fr">Vous pouvez écrire à Hubert Desgranges, pour lui proposer des améliorations sur son site  :-) </a>
 	</footer>
 	</body>
 </html>
