--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hubert Desgranges</title>
+		<title>Hbrt Dsgrngs</title>
 	</head>
 	<body>
 	<div class="container">
 		
     	<div class="blurb">
-		<h1>  Quelques documents sur la guerre 14/18 de Hubert Desgranges </h1>
+		<h1>  Quelques documents sur la guerre 14/18 de Hbrt Dsgrngs </h1>
 
         	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 Oct 1915</a></h3>
     	</div>
 	</div>
 	<footer>
-    		<a href="mailto:hubertdesgranges@yahoo.fr">Vous pouvez écrire à Hubert Desgranges, pour lui proposer des améliorations sur son site  :-) </a>
+    		<small><a href="mailto:hubertdesgranges@yahoo.fr"> Écrivez à Hbrt Dsgrngs</a>
+		</small>
 	</footer>
 	</body>
 </html>
