--- a/mémoires/Mémoires_et_Souvenirs_de_la_Guerre_1914_1918_Page_2.html
+++ b/mémoires/Mémoires_et_Souvenirs_de_la_Guerre_1914_1918_Page_2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Mémoires et Souvenirs de la Guerre de 1914 - 1918</title>
 </head>
-								AVERTISSEMENT
+<body>
+<pre>								AVERTISSEMENT
 
 			:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:-:
 
@@ -23,8 +24,7 @@
 
 										Michel Desgranges
 
-<body>
-<pre>
+
 </pre>
 <footer>
  <small><a href="./Mémoires_et_Souvenirs_de_la_Guerre_1914_1918_Page_1.html">Page précédente</a></small>
