--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     	<div class="blurb">
 		<h1>  Quelques documents sur la guerre 14/18 de Hbrt Dsgrngs </h1>
 
-        	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 Oct 1915</a></h3>
+        	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 oct 1915</a></h3>
+		<h3><a href="./mémoires/Memoires.pdf">Mémoires et Souvenirs de la guerre 1914-1918 par Hbrt Dsgrngs</a></h3>
     	</div>
 	</div>
 	<footer>
