--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<h3><a href="./docs/1915_11_03/1915_11_03.html">Lettre à sa mère du 11 mars 1915</a></h3>
 		<h3><a href="./docs/1915_20_09/1915_20_09.html">Lettre à sa mère du 20 septembre 1915</a></h3>
-        	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 octobre 1915</a></h3>*
+        	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 octobre 1915</a></h3>
 		<h3><a href="./docs/1915_25_10/1915_25_10.html">Lettre à sa mère du 25 octobre 1915</a></h3>
 		<h3><a href="./docs/1916_12_01/1916_12_01.html">Lettre à sa mère du 12 janvier 1916</a></h3>
 		<h3><a href="./docs/1916_13_05/1916_13_05.html">Lettre à sa mère du 13 mai 1916</a></h3>
