autres lettres gp

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Hbrt Dsgrngs </title>
+		<title>Hbrt Dsgrngs</title>
 	</head>
 	<body>
 	<div class="container">
@@ -9,13 +9,13 @@
     	<div class="blurb">
 		<h1> Quelques documents sur la guerre 14/18 de Hbrt Dsgrngs </h1
 
-		<h3><a href="./docs/1915_11_03/1915_11_03.html">Lettre à sa mère du 11 mars 1915</a></h3>
-		<h3><a href="./docs/1915_20_09/1915_20_09.html">Lettre à sa mère du 20 septembre 1915</a></h3>
-        	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre à sa mère du 05 octobre 1915</a></h3>
-		<h3><a href="./docs/1915_25_10/1915_25_10.html">Lettre à sa mère du 25 octobre 1915</a></h3>
-		<h3><a href="./docs/1916_12_01/1916_12_01.html">Lettre à sa mère du 12 janvier 1916</a></h3>
-		<h3><a href="./docs/1916_13_05/1916_13_05.html">Lettre à sa mère du 13 mai 1916</a></h3>
-		<h3><a href="./docs/1916_19_06/1916_19_06.html">Lettre à sa mère du 19 juin 1916</a></h3>
+		<h3><a href="./docs/1915_11_03/1915_11_03.html">Lettre du 11 mars 1915</a></h3>
+		<h3><a href="./docs/1915_20_09/1915_20_09.html">Lettre du 20 septembre 1915</a></h3>
+        	<h3><a href="./docs/1915_05_10/1915_05_10.html">Lettre du 05 octobre 1915</a></h3>
+		<h3><a href="./docs/1915_25_10/1915_25_10.html">Lettre du 25 octobre 1915</a></h3>
+		<h3><a href="./docs/1916_12_01/1916_12_01.html">Lettre du 12 janvier 1916</a></h3>
+		<h3><a href="./docs/1916_13_05/1916_13_05.html">Lettre du 13 mai 1916</a></h3>
+		<h3><a href="./docs/1916_19_06/1916_19_06.html">Lettre du 19 juin 1916</a></h3>
 
 		<h3><a href="./mémoires/Memoires.pdf">Mémoires et Souvenirs de la guerre 1914-1918 par Hbrt Dsgrngs</a></h3>
     	</div>
