autres lettres gp

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<div class="container">
 		
     	<div class="blurb">
-		<h1> Quelques documents sur la guerre 14/18 de Hbrt Dsgrngs </h1
+		<h1> Quelques documents sur la guerre 14/18 de Hbrt Dsgrngs </h1>
 
 		<h3><a href="./docs/1915_11_03/1915_11_03.html">Lettre du 11 mars 1915</a></h3>
 		<h3><a href="./docs/1915_20_09/1915_20_09.html">Lettre du 20 septembre 1915</a></h3>
